ansible/ressources/k8s/gateway/proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
  - name: http     
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: https     
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: metrics-1  
    port: 9901
    protocol: TCP
    targetPort: 9901
  - name: udp-port   
    port: 9902
    protocol: UDP
    targetPort: 9902
  - name: metrics-2  
    port: 9903
    protocol: TCP
    targetPort: 9903
